完成基本内容

--- a/index.html
+++ b/index.html
@@ -5,56 +5,229 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>奡翀网址导航</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
+    <script src="js/main.js" charset="utf-8"></script>
   </head>
   <body>
     <div class="wrap">
       <div class="side-bar">
         <ul>
-          <li>
+          <li id="program" class="side-bar-active">
               <i class="iconfont">&#xe649;</i>
-              <a href="#">编程</a>
+              <span>编程</span>
           </li>
-          <li>
+          <li id="design">
               <i class="iconfont">&#xe612;</i>
-              <a href="#">设计</a>
+              <span>设计</span>
           </li>
-          <li>
+          <li id="course">
               <i class="iconfont">&#xe619;</i>
-              <a href="#">教程</a>
+              <span>教程</span>
           </li>
-          <li>
+          <li id="ss">
               <i class="iconfont">&#xe652;</i>
-              <a href="#">翻墙</a>
+              <span>翻墙</span>
           </li>
-          <li>
+          <li id="bbs">
               <i class="iconfont">&#xe60d;</i>
-              <a href="#">论坛</a>
+              <span>论坛</span>
           </li>
-          <li>
+          <li id="media">
               <i class="iconfont">&#xe600;</i>
-              <a href="#">影音</a>
+              <span>影音</span>
           </li>
-          <li>
+          <li id="shop">
               <i class="iconfont">&#xe632;</i>
-              <a href="#">网购</a>
+              <span>网购</span>
           </li>
-          <li>
+          <li id="app">
               <i class="iconfont">&#xe6dc;</i>
-              <a href="#">应用</a>
+              <span>应用</span>
           </li>
-          <li>
+          <li id="search">
               <i class="iconfont">&#xe61d;</i>
-              <a href="#">搜索</a>
+              <span>搜索</span>
           </li>
-          <li>
+          <li id="others">
               <i class="iconfont">&#xe742;</i>
-              <a href="#">其他</a>
+              <span>其他</span>
           </li>
 
         </ul>
       </div>
       <div class="content">
-
+        <div class="program">
+          <ul>
+            <li><a class="webside" href="https://nodejs.org/en/" target="_blank">
+              <div class="icon"><img src="https://nodejs.org/static/favicon.png" alt=""></div>
+              <span>Node.js</span>
+            </a></li>
+            <li><a class="webside" href="https://facebook.github.io/react/" target="_blank">
+              <div class="icon"><img src="https://facebook.github.io/react/favicon.ico" alt=""></div>
+              <span>React</span>
+            </a></li>
+            <li><a class="webside" href="https://cn.vuejs.org" target="_blank">
+              <div class="icon"><img src="https://cn.vuejs.org/images/icons/favicon-96x96.png" alt=""></div>
+              <span>Vue.js</span>
+            </a></li>
+            <li><a class="webside" href="http://www.bootcss.com" target="_blank">
+              <div class="icon"><img src="https://static.bootcss.com/www/assets/ico/favicon.png?1498888909031" alt=""></div>
+              <span>Bootstrap中文网</span>
+            </a></li>
+            <li><a class="webside" href="https://www.python.org" target="_blank">
+              <div class="icon"><img src="https://www.python.org/static/apple-touch-icon-72x72-precomposed.png" alt=""></div>
+              <span>Python</span>
+            </a></li>
+            <li><a class="webside" href="https://github.com" target="_blank">
+              <div class="icon"><img src="https://github.com/fluidicon.png" alt=""></div>
+              <span>GitHub</span>
+            </a></li>
+            <li><a class="webside" href="https://brew.sh/index_zh-cn.html" target="_blank">
+              <div class="icon"><img src="https://brew.sh/img/apple-touch-icon.png" alt=""></div>
+              <span>Homebrew</span>
+            </a></li>
+            <li><a class="webside" href="http://www.ofmonkey.com" target="_blank">
+              <div class="icon"><img src="http://www.ofmonkey.com/images/monkey.ico" alt=""></div>
+              <span>程序员在线工具</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="design display-none">
+          <ul>
+            <li><a class="webside" href="http://www.easyicon.net" target="_blank">
+              <div class="icon"><img src="http://cdn-img.easyicon.net/favicon.ico" alt=""></div>
+              <span>EasyIcon</span>
+            </a></li>
+            <li><a class="webside" href="http://www.iconfont.cn/manage/index" target="_blank">
+              <div class="icon"><img src="http://gtms04.alicdn.com/tps/i4/TB1_oz6GVXXXXaFXpXXJDFnIXXX-64-64.ico" alt=""></div>
+              <span>Iconfont</span>
+            </a></li>
+            <li><a class="webside" href="http://nipponcolors.com/#shironezumi" target="_blank">
+              <div class="icon"><img src="http://nipponcolors.com/images/site_thumb.jpg" alt=""></div>
+              <span>NIPPON COLORS</span>
+            </a></li>
+            <li><a class="webside" href="http://cli.im" target="_blank">
+              <div class="icon"><img src="http://static.clewm.net/static/images/favicon.ico" alt=""></div>
+              <span>草料二维码</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="course display-none">
+          <ul>
+            <li><a class="webside" href="http://www.imooc.com" target="_blank">
+              <div class="icon"><img src="http://img.mukewang.com/57a322f00001e4ae02560256-200-200.jpg" alt=""></div>
+              <span>慕课网</span>
+            </a></li>
+            <li><a class="webside" href="http://study.163.com/" target="_blank">
+              <div class="icon"><img src="" alt=""></div>
+              <span>网易云课堂</span>
+            </a></li>
+            <li><a class="webside" href="http://www.51zxw.net/study.asp?vip=4754485" target="_blank">
+              <div class="icon"><img src="http://www.51zxw.net/favicon.ico" alt=""></div>
+              <span>我要自学网</span>
+            </a></li>
+            <li><a class="webside" href="http://haoduoshipin.com" target="_blank">
+              <div class="icon"><img src="" alt=""></div>
+              <span>haoduoshipin</span>
+            </a></li>
+            <li><a class="webside" href="http://www.runoob.com" target="_blank">
+              <div class="icon"><img src="http://static.runoob.com/images/icon/mobile-icon.png" alt=""></div>
+              <span>菜鸟教程</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="ss display-none">
+          <ul>
+            <li><a class="webside" href="http://ss.ishadowx.com/index_cn.html" target="_blank">
+              <div class="icon"><img src="http://ss.ishadowx.com/img/apple-touch-icon.png" alt=""></div>
+              <span>iShadow</span>
+            </a></li>
+            <li><a class="webside" href="https://shadowsocksr.ru" target="_blank">
+              <div class="icon"><img src="https://shadowsocksr.ru/Shadowsocks.png" alt=""></div>
+              <span>免费ShadowsocksR</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="bbs display-none">
+          <ul>
+            <li><a class="webside" href="https://www.chiphell.com/" target="_blank">
+              <div class="icon"><img src="https://www.chiphell.com/static/image/common/logo.png" alt=""></div>
+              <span>Chiphell</span>
+            </a></li>
+            <li><a class="webside" href="https://www.zhihu.com/" target="_blank">
+              <div class="icon"><img src="https://static.zhihu.com/static/favicon.ico" alt=""></div>
+              <span>知乎</span>
+            </a></li>
+            <li><a class="webside" href="https://bbs.feng.com" target="_blank">
+              <div class="icon"><img src="https://bbs.feng.com/source/plugin/feng_mobile/template/images/touch-icon-ipad.png" alt=""></div>
+              <span>威锋论坛</span>
+            </a></li>
+            <li><a class="webside" href="http://bbs.gfan.com" target="_blank">
+              <div class="icon"><img src="" alt=""></div>
+              <span>机锋论坛</span>
+            </a></li>
+            <li><a class="webside" href="http://www.dgtle.com/dgmobile.php" target="_blank">
+              <div class="icon"><img src="http://www.dgtle.com/favicon.ico" alt=""></div>
+              <span>数字尾巴</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="media display-none">
+          <ul>
+            <li><a class="webside" href="https://www.youtube.comYouTube" target="_blank">
+              <div class="icon"><img src="https://www.youtube.com/yts/img/favicon_48-vfl1s0rGh.png" alt=""></div>
+              <span>YouTube</span>
+            </a></li>
+            <li><a class="webside" href="http://www.youku.com" target="_blank">
+              <div class="icon"><img src="http://static.youku.com/v1.0.166/index/img/favicon.ico" alt=""></div>
+              <span>优酷</span>
+            </a></li>
+            <li><a class="webside" href="http://www.meijutt.com" target="_blank">
+              <div class="icon"><img src="http://www.meijutt.com/favicon.ico" alt=""></div>
+              <span>美剧天堂</span>
+            </a></li>
+            <li><a class="webside" href="" target="_blank">
+              <div class="icon"><img src="" alt=""></div>
+              <span></span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="shop display-none">
+          <ul>
+            <li><a class="webside" href="https://www.taobao.com" target="_blank">
+              <div class="icon"><img src="https://img.alicdn.com/tps/i3/T1OjaVFl4dXXa.JOZB-114-114.png" alt=""></div>
+              <span>淘宝网</span>
+            </a></li>
+            <li><a class="webside" href="https://www.jd.com" target="_blank">
+              <div class="icon"><img src="https://www.jd.com/favicon.ico" alt=""></div>
+              <span>京东商城</span>
+            </a></li>
+            <li><a class="webside" href="https://www.1688.com/" target="_blank">
+              <div class="icon"><img src="https://cbu01.alicdn.com/favicon.ico" alt=""></div>
+              <span>阿里巴巴</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="search display-none">
+          <ul>
+            <li><a class="webside" href="http://magnet.chongbuluo.com" target="_blank">
+              <div class="icon"><img src="http://search.chongbuluo.com/favicon.ico" alt=""></div>
+              <span>虫部落</span>
+            </a></li>
+            <li><a class="webside" href="http://www.javzoo.org" target="_blank">
+              <div class="icon"><img src="http://www.javzoo.org/script/images/apple-touch-icon.png" alt=""></div>
+              <span>JAVZOO</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="分类 display-none">
+          <ul>
+            <li><a class="webside" href="" target="_blank">
+              <div class="icon"><img src="" alt=""></div>
+              <span></span>
+            </a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
