网站图标重绘

--- a/index.html
+++ b/index.html
@@ -59,35 +59,35 @@
         <div class="program">
           <ul>
             <li><a class="webside" href="https://nodejs.org/en/" target="_blank">
-              <div class="icon"><img src="https://nodejs.org/static/favicon.png" alt=""></div>
+              <div class="icon"><img src="images/NodeJs.png" alt=""></div>
               <span>Node.js</span>
             </a></li>
             <li><a class="webside" href="https://facebook.github.io/react/" target="_blank">
-              <div class="icon"><img src="https://facebook.github.io/react/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/React.png" alt=""></div>
               <span>React</span>
             </a></li>
             <li><a class="webside" href="https://cn.vuejs.org" target="_blank">
-              <div class="icon"><img src="https://cn.vuejs.org/images/icons/favicon-96x96.png" alt=""></div>
+              <div class="icon"><img src="images/VueJs.png" alt=""></div>
               <span>Vue.js</span>
             </a></li>
             <li><a class="webside" href="http://www.bootcss.com" target="_blank">
-              <div class="icon"><img src="https://static.bootcss.com/www/assets/ico/favicon.png?1498888909031" alt=""></div>
+              <div class="icon"><img src="images/Bootstrap.png" alt=""></div>
               <span>Bootstrap中文网</span>
             </a></li>
             <li><a class="webside" href="https://www.python.org" target="_blank">
-              <div class="icon"><img src="https://www.python.org/static/apple-touch-icon-72x72-precomposed.png" alt=""></div>
+              <div class="icon"><img src="images/Python.png" alt=""></div>
               <span>Python</span>
             </a></li>
             <li><a class="webside" href="https://github.com" target="_blank">
-              <div class="icon"><img src="https://github.com/fluidicon.png" alt=""></div>
+              <div class="icon"><img src="images/GitHub.png" alt=""></div>
               <span>GitHub</span>
             </a></li>
             <li><a class="webside" href="https://brew.sh/index_zh-cn.html" target="_blank">
-              <div class="icon"><img src="https://brew.sh/img/apple-touch-icon.png" alt=""></div>
+              <div class="icon"><img src="images/Homebrew.png" alt=""></div>
               <span>Homebrew</span>
             </a></li>
             <li><a class="webside" href="http://www.ofmonkey.com" target="_blank">
-              <div class="icon"><img src="http://www.ofmonkey.com/images/monkey.ico" alt=""></div>
+              <div class="icon"><img src="images/程序员在线工具.png" alt=""></div>
               <span>程序员在线工具</span>
             </a></li>
           </ul>
@@ -95,19 +95,19 @@
         <div class="design display-none">
           <ul>
             <li><a class="webside" href="http://www.easyicon.net" target="_blank">
-              <div class="icon"><img src="http://cdn-img.easyicon.net/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/EasyIcon.png" alt=""></div>
               <span>EasyIcon</span>
             </a></li>
             <li><a class="webside" href="http://www.iconfont.cn/manage/index" target="_blank">
-              <div class="icon"><img src="http://gtms04.alicdn.com/tps/i4/TB1_oz6GVXXXXaFXpXXJDFnIXXX-64-64.ico" alt=""></div>
+              <div class="icon"><img src="images/Iconfont.png" alt=""></div>
               <span>Iconfont</span>
             </a></li>
             <li><a class="webside" href="http://nipponcolors.com/#shironezumi" target="_blank">
-              <div class="icon"><img src="http://nipponcolors.com/images/site_thumb.jpg" alt=""></div>
+              <div class="icon"><img src="images/NIPPON COLORS.png" alt=""></div>
               <span>NIPPON COLORS</span>
             </a></li>
             <li><a class="webside" href="http://cli.im" target="_blank">
-              <div class="icon"><img src="http://static.clewm.net/static/images/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/草料二维码.png" alt=""></div>
               <span>草料二维码</span>
             </a></li>
           </ul>
@@ -115,23 +115,23 @@
         <div class="course display-none">
           <ul>
             <li><a class="webside" href="http://www.imooc.com" target="_blank">
-              <div class="icon"><img src="http://img.mukewang.com/57a322f00001e4ae02560256-200-200.jpg" alt=""></div>
+              <div class="icon"><img src="images/慕课网.png" alt=""></div>
               <span>慕课网</span>
             </a></li>
             <li><a class="webside" href="http://study.163.com/" target="_blank">
-              <div class="icon"><img src="" alt=""></div>
+              <div class="icon"><img src="images/网易云课堂.png" alt=""></div>
               <span>网易云课堂</span>
             </a></li>
             <li><a class="webside" href="http://www.51zxw.net/study.asp?vip=4754485" target="_blank">
-              <div class="icon"><img src="http://www.51zxw.net/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/我要自学网.png" alt=""></div>
               <span>我要自学网</span>
             </a></li>
             <li><a class="webside" href="http://haoduoshipin.com" target="_blank">
-              <div class="icon"><img src="" alt=""></div>
+              <div class="icon"><img src="images/网址.png" alt=""></div>
               <span>haoduoshipin</span>
             </a></li>
             <li><a class="webside" href="http://www.runoob.com" target="_blank">
-              <div class="icon"><img src="http://static.runoob.com/images/icon/mobile-icon.png" alt=""></div>
+              <div class="icon"><img src="images/菜鸟教程.png" alt=""></div>
               <span>菜鸟教程</span>
             </a></li>
           </ul>
@@ -139,11 +139,11 @@
         <div class="ss display-none">
           <ul>
             <li><a class="webside" href="http://ss.ishadowx.com/index_cn.html" target="_blank">
-              <div class="icon"><img src="http://ss.ishadowx.com/img/apple-touch-icon.png" alt=""></div>
+              <div class="icon"><img src="images/iShadow.png" alt=""></div>
               <span>iShadow</span>
             </a></li>
             <li><a class="webside" href="https://shadowsocksr.ru" target="_blank">
-              <div class="icon"><img src="https://shadowsocksr.ru/Shadowsocks.png" alt=""></div>
+              <div class="icon"><img src="images/免费ShadowsocksR.png" alt=""></div>
               <span>免费ShadowsocksR</span>
             </a></li>
           </ul>
@@ -151,23 +151,19 @@
         <div class="bbs display-none">
           <ul>
             <li><a class="webside" href="https://www.chiphell.com/" target="_blank">
-              <div class="icon"><img src="https://www.chiphell.com/static/image/common/logo.png" alt=""></div>
+              <div class="icon"><img src="images/chiphell.png" alt=""></div>
               <span>Chiphell</span>
             </a></li>
             <li><a class="webside" href="https://www.zhihu.com/" target="_blank">
-              <div class="icon"><img src="https://static.zhihu.com/static/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/知乎.png" alt=""></div>
               <span>知乎</span>
             </a></li>
-            <li><a class="webside" href="https://bbs.feng.com" target="_blank">
-              <div class="icon"><img src="https://bbs.feng.com/source/plugin/feng_mobile/template/images/touch-icon-ipad.png" alt=""></div>
-              <span>威锋论坛</span>
-            </a></li>
             <li><a class="webside" href="http://bbs.gfan.com" target="_blank">
-              <div class="icon"><img src="" alt=""></div>
+              <div class="icon"><img src="images/机锋论坛.png" alt=""></div>
               <span>机锋论坛</span>
             </a></li>
             <li><a class="webside" href="http://www.dgtle.com/dgmobile.php" target="_blank">
-              <div class="icon"><img src="http://www.dgtle.com/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/数字尾巴.png" alt=""></div>
               <span>数字尾巴</span>
             </a></li>
           </ul>
@@ -175,35 +171,31 @@
         <div class="media display-none">
           <ul>
             <li><a class="webside" href="https://www.youtube.comYouTube" target="_blank">
-              <div class="icon"><img src="https://www.youtube.com/yts/img/favicon_48-vfl1s0rGh.png" alt=""></div>
+              <div class="icon"><img src="images/YouTube.png" alt=""></div>
               <span>YouTube</span>
             </a></li>
             <li><a class="webside" href="http://www.youku.com" target="_blank">
-              <div class="icon"><img src="http://static.youku.com/v1.0.166/index/img/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/优酷.png" alt=""></div>
               <span>优酷</span>
             </a></li>
             <li><a class="webside" href="http://www.meijutt.com" target="_blank">
-              <div class="icon"><img src="http://www.meijutt.com/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/网址.png" alt=""></div>
               <span>美剧天堂</span>
-            </a></li>
-            <li><a class="webside" href="" target="_blank">
-              <div class="icon"><img src="" alt=""></div>
-              <span></span>
             </a></li>
           </ul>
         </div>
         <div class="shop display-none">
           <ul>
             <li><a class="webside" href="https://www.taobao.com" target="_blank">
-              <div class="icon"><img src="https://img.alicdn.com/tps/i3/T1OjaVFl4dXXa.JOZB-114-114.png" alt=""></div>
+              <div class="icon"><img src="images/淘宝网.png" alt=""></div>
               <span>淘宝网</span>
             </a></li>
             <li><a class="webside" href="https://www.jd.com" target="_blank">
-              <div class="icon"><img src="https://www.jd.com/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/京东商城.png" alt=""></div>
               <span>京东商城</span>
             </a></li>
             <li><a class="webside" href="https://www.1688.com/" target="_blank">
-              <div class="icon"><img src="https://cbu01.alicdn.com/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/阿里巴巴.png" alt=""></div>
               <span>阿里巴巴</span>
             </a></li>
           </ul>
@@ -211,11 +203,11 @@
         <div class="search display-none">
           <ul>
             <li><a class="webside" href="http://magnet.chongbuluo.com" target="_blank">
-              <div class="icon"><img src="http://search.chongbuluo.com/favicon.ico" alt=""></div>
+              <div class="icon"><img src="images/虫部落.png" alt=""></div>
               <span>虫部落</span>
             </a></li>
             <li><a class="webside" href="http://www.javzoo.org" target="_blank">
-              <div class="icon"><img src="http://www.javzoo.org/script/images/apple-touch-icon.png" alt=""></div>
+              <div class="icon"><img src="images/搜索.png" alt=""></div>
               <span>JAVZOO</span>
             </a></li>
           </ul>
