--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
               <i class="iconfont">&#xe60d;</i>
               <span>论坛</span>
           </li>
+          <li id="blog">
+              <i class="iconfont">&#xe6ae;</i>
+              <span>博客</span>
+          </li>
+          <li id="web">
+              <i class="iconfont">&#xe607;</i>
+              <span>官网</span>
+          </li>
           <li id="media">
               <i class="iconfont">&#xe600;</i>
               <span>影音</span>
@@ -39,6 +47,10 @@
           <li id="shop">
               <i class="iconfont">&#xe632;</i>
               <span>网购</span>
+          </li>
+          <li id="map">
+              <i class="iconfont">&#xe603;</i>
+              <span>地图</span>
           </li>
           <li id="app">
               <i class="iconfont">&#xe6dc;</i>
@@ -134,6 +146,10 @@
               <div class="icon"><img src="images/菜鸟教程.png" alt=""></div>
               <span>菜鸟教程</span>
             </a></li>
+            <li><a class="webside" href="http://www.liaoxuefeng.com" target="_blank">
+              <div class="icon"><img src="images/网址.png" alt=""></div>
+              <span>廖雪峰的官方网站</span>
+            </a></li>
           </ul>
         </div>
         <div class="ss display-none">
@@ -165,6 +181,38 @@
             <li><a class="webside" href="http://www.dgtle.com/dgmobile.php" target="_blank">
               <div class="icon"><img src="images/数字尾巴.png" alt=""></div>
               <span>数字尾巴</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="blog display-none">
+          <ul>
+            <li><a class="webside" href="http://www.ruanyifeng.com/blog/" target="_blank">
+              <div class="icon"><img src="images/网址.png" alt=""></div>
+              <span>阮一峰的网络日志</span>
+            </a></li>
+          </ul>
+        </div>
+        <div class="web display-none">
+          <ul>
+            <li><a class="webside" href="https://www.apple.com/cn/" target="_blank">
+              <div class="icon"><img src="images/Apple.png" alt=""></div>
+              <span>Apple</span>
+            </a></li>
+            <li><a class="webside" href="http://www.sonystyle.com.cn/" target="_blank">
+              <div class="icon"><img src="images/sony.png" alt=""></div>
+              <span>SONY</span>
+            </a></li>
+            <li><a class="webside" href="https://www.siemens.com/cn/zh/home.html" target="_blank">
+              <div class="icon"><img src="images/siemens.png" alt=""></div>
+              <span>SIEMENS</span>
+            </a></li>
+            <li><a class="webside" href="http://www.philips.com.cn" target="_blank">
+              <div class="icon"><img src="images/philips.png" alt=""></div>
+              <span>PHILIPS</span>
+            </a></li>
+            <li><a class="webside" href="http://www.samsung.com/cn/" target="_blank">
+              <div class="icon"><img src="images/samsung.png" alt=""></div>
+              <span>SAMSUNG</span>
             </a></li>
           </ul>
         </div>
@@ -200,8 +248,28 @@
             </a></li>
           </ul>
         </div>
+        <div class="map display-none">
+          <ul>
+            <li><a class="webside" href="http://ditu.amap.com" target="_blank">
+              <div class="icon"><img src="images/高德地图.png" alt=""></div>
+              <span>高德地图</span>
+            </a></li>
+            <li><a class="webside" href="http://www.google.cn/maps/" target="_blank">
+              <div class="icon"><img src="images/Google地图.png" alt=""></div>
+              <span>Google地图</span>
+            </a></li>
+            <li><a class="webside" href="https://www.google.com/earth/" target="_blank">
+              <div class="icon"><img src="images/Google地球.png" alt=""></div>
+              <span>Google地球</span>
+            </a></li>
+          </ul>
+        </div>
         <div class="search display-none">
           <ul>
+            <li><a class="webside" href="https://www.google.com.hk" target="_blank">
+              <div class="icon"><img src="images/Google.png" alt=""></div>
+              <span>Google</span>
+            </a></li>
             <li><a class="webside" href="http://magnet.chongbuluo.com" target="_blank">
               <div class="icon"><img src="images/虫部落.png" alt=""></div>
               <span>虫部落</span>
