右侧网站区域自动居中
使用@media使右侧网站区域有固定宽度值，从而达到自动居中目的。

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
       </div>
       <div class="content">
-        <div class="program">
+        <div class="webside-wrap program">
           <ul>
             <li><a class="webside" href="https://nodejs.org/en/" target="_blank">
               <div class="icon"><img src="images/NodeJs.png" alt=""></div>
@@ -104,7 +104,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="design display-none">
+        <div class="webside-wrap design display-none">
           <ul>
             <li><a class="webside" href="http://www.easyicon.net" target="_blank">
               <div class="icon"><img src="images/EasyIcon.png" alt=""></div>
@@ -124,7 +124,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="course display-none">
+        <div class="webside-wrap course display-none">
           <ul>
             <li><a class="webside" href="http://www.imooc.com" target="_blank">
               <div class="icon"><img src="images/慕课网.png" alt=""></div>
@@ -152,7 +152,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="ss display-none">
+        <div class="webside-wrap ss display-none">
           <ul>
             <li><a class="webside" href="http://ss.ishadowx.com/index_cn.html" target="_blank">
               <div class="icon"><img src="images/iShadow.png" alt=""></div>
@@ -164,7 +164,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="bbs display-none">
+        <div class="webside-wrap bbs display-none">
           <ul>
             <li><a class="webside" href="https://www.chiphell.com/" target="_blank">
               <div class="icon"><img src="images/chiphell.png" alt=""></div>
@@ -184,7 +184,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="blog display-none">
+        <div class="webside-wrap blog display-none">
           <ul>
             <li><a class="webside" href="http://www.ruanyifeng.com/blog/" target="_blank">
               <div class="icon"><img src="images/网址.png" alt=""></div>
@@ -192,7 +192,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="web display-none">
+        <div class="webside-wrap web display-none">
           <ul>
             <li><a class="webside" href="https://www.apple.com/cn/" target="_blank">
               <div class="icon"><img src="images/Apple.png" alt=""></div>
@@ -216,7 +216,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="media display-none">
+        <div class="webside-wrap media display-none">
           <ul>
             <li><a class="webside" href="https://www.youtube.comYouTube" target="_blank">
               <div class="icon"><img src="images/YouTube.png" alt=""></div>
@@ -232,7 +232,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="shop display-none">
+        <div class="webside-wrap shop display-none">
           <ul>
             <li><a class="webside" href="https://www.taobao.com" target="_blank">
               <div class="icon"><img src="images/淘宝网.png" alt=""></div>
@@ -248,7 +248,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="map display-none">
+        <div class="webside-wrap map display-none">
           <ul>
             <li><a class="webside" href="http://ditu.amap.com" target="_blank">
               <div class="icon"><img src="images/高德地图.png" alt=""></div>
@@ -264,7 +264,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="search display-none">
+        <div class="webside-wrap search display-none">
           <ul>
             <li><a class="webside" href="https://www.google.com.hk" target="_blank">
               <div class="icon"><img src="images/Google.png" alt=""></div>
@@ -280,7 +280,7 @@
             </a></li>
           </ul>
         </div>
-        <div class="分类 display-none">
+        <div class="webside-wrap 分类 display-none">
           <ul>
             <li><a class="webside" href="" target="_blank">
               <div class="icon"><img src="" alt=""></div>
