搜索框制作完成

--- a/index.html
+++ b/index.html
@@ -70,10 +70,22 @@
       <div class="content">
         <div class="search-wrap">
           <div class="search-box">
+            <div class="search-logo search-logo-g">
 
+            </div>
+            <form class="form" action="http://www.google.com.hk/search?" method="get" target="_blank">
+              <input type="text" name="q" value="" class="search-text">
+              <input type="submit" name="" value="" class="search-btn">
+            </form>
           </div>
           <div class="search-box">
+            <div class="search-logo search-logo-b">
 
+            </div>
+            <form class="form" action="https://www.baidu.com/s" method="get" target="_blank">
+              <input type="text" name="wd" value="" class="search-text">
+              <input type="submit" name="" value="" class="search-btn">
+            </form>
           </div>
         </div>
         <div class="webside-wrap program">
