--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="search-logo search-logo-g">
 
             </div>
-            <form class="form" action="http://www.google.com.hk/search?" method="get" target="_blank">
+            <form class="form" action="https://www.google.com/search?" method="get" target="_blank">
               <input type="text" name="q" value="" class="search-text">
               <input type="submit" name="" value="" class="search-btn">
             </form>
