--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             </div>
             <form class="form" action="https://www.google.com/search?" method="get" target="_blank">
-              <input type="search" name="q" value="" class="search-text">
+              <input type="search" name="q" value="" class="search-text" id="submit">
               <input type="submit" name="" value="" class="search-btn">
             </form>
           </div>
@@ -83,7 +83,7 @@
 
             </div>
             <form class="form" action="https://www.baidu.com/s" method="get" target="_blank">
-              <input type="search" name="wd" value="" class="search-text">
+              <input type="search" name="wd" value="" class="search-text" id="submit">
               <input type="submit" name="" value="" class="search-btn">
             </form>
           </div>
