--- a/index.html
+++ b/index.html
@@ -70,20 +70,16 @@
       <div class="content">
         <div class="search-wrap">
           <div class="search-box">
-            <div class="search-logo search-logo-g">
-
-            </div>
-            <form class="form" action="https://www.google.com/search?" method="get" target="_blank">
-              <input type="search" name="q" value="" class="search-text" id="submit">
+            <div class="search-logo search-logo-g"></div>
+            <form class="form" id="g-search-form" action="https://www.google.com/search?" method="get" target="_blank">
+              <input type="search" name="q" value="" class="search-text" id="g-search-input">
               <input type="submit" name="" value="" class="search-btn">
             </form>
           </div>
           <div class="search-box">
-            <div class="search-logo search-logo-b">
-
-            </div>
-            <form class="form" action="https://www.baidu.com/s" method="get" target="_blank">
-              <input type="search" name="wd" value="" class="search-text" id="submit">
+            <div class="search-logo search-logo-b"></div>
+            <form class="form" id="b-search-form" action="https://www.baidu.com/s" method="get" target="_blank">
+              <input type="search" name="wd" value="" class="search-text" id="b-search-input">
               <input type="submit" name="" value="" class="search-btn">
             </form>
           </div>
