--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
               <i class="iconfont">&#xe742;</i>
               <span>其他</span>
           </li>
+          <li id="about">
+              <i class="iconfont">&#xe620;</i>
+              <span>关于</span>
+          </li>
 
         </ul>
       </div>
@@ -296,12 +300,14 @@
             </a></li>
           </ul>
         </div>
-        <div class="webside-wrap 分类 display-none">
+        <div class="webside-wrap about display-none">
           <ul>
-            <li><a class="webside" href="" target="_blank">
-              <div class="icon"><img src="" alt=""></div>
-              <span></span>
-            </a></li>
+            <li><div class="about-content">
+              GitHub: <a href="https://github.com/AochongZhang/" target="_blank">https://github.com/AochongZhang/</a>
+            </div></li>
+            <li><div class="about-content">
+              E-Mail: <a href="mailto:aochongzhang@gmail.com">aochongzhang@gmail.com</a>
+            </div></li>
           </ul>
         </div>
       </div>
