about页完成并修复BUG

--- a/index.html
+++ b/index.html
@@ -300,15 +300,30 @@
             </a></li>
           </ul>
         </div>
-        <div class="webside-wrap about display-none">
-          <ul>
-            <li><div class="about-content">
-              GitHub: <a href="https://github.com/AochongZhang/" target="_blank">https://github.com/AochongZhang/</a>
-            </div></li>
-            <li><div class="about-content">
-              E-Mail: <a href="mailto:aochongzhang@gmail.com">aochongzhang@gmail.com</a>
-            </div></li>
-          </ul>
+        <div class="about display-none">
+          <div class="about-headicon">
+            <img src="images/头像.png" alt="">
+          </div>
+          <div class="about-name">
+            Aochong Zhang
+          </div>
+          <div class="about-connection">
+            <div class="connection-icon">
+              <a href="https://github.com/AochongZhang/Web-Nav/" target="_blank">
+                <img src="images/about-源代码.png" alt="">
+              </a>
+            </div>
+            <div class="connection-icon">
+              <a href="https://github.com/AochongZhang/" target="_blank">
+                <img src="images/about-github.png" alt="">
+              </a>
+            </div>
+            <div class="connection-icon">
+              <a href="mailto:aochongzhang@gmail.com">
+                <img src="images/about-email.png" alt="">
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
