--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>奡翀网址导航</title>
+    <base target="_blank">  <!-- 所有链接在新窗口打开 -->
     <link rel="stylesheet" href="css/main.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
     <script src="js/main.js" charset="utf-8"></script>
@@ -75,14 +76,14 @@
         <div class="search-wrap">
           <div class="search-box">
             <div class="search-logo search-logo-g"></div>
-            <form class="form" id="g-search-form" action="https://www.google.com/search?" method="get" target="_blank">
+            <form class="form" id="g-search-form" action="https://www.google.com/search?" method="get">
               <input type="search" name="q" value="" class="search-text" id="g-search-input">
               <input type="submit" name="" value="" class="search-btn">
             </form>
           </div>
           <div class="search-box">
             <div class="search-logo search-logo-b"></div>
-            <form class="form" id="b-search-form" action="https://www.baidu.com/s" method="get" target="_blank">
+            <form class="form" id="b-search-form" action="https://www.baidu.com/s" method="get">
               <input type="search" name="wd" value="" class="search-text" id="b-search-input">
               <input type="submit" name="" value="" class="search-btn">
             </form>
@@ -90,35 +91,35 @@
         </div>
         <div class="webside-wrap program">
           <ul>
-            <li><a class="webside" href="https://nodejs.org/en/" target="_blank">
+            <li><a class="webside" href="https://nodejs.org/en/">
               <div class="icon"><img src="images/NodeJs.png" alt=""></div>
               <span>Node.js</span>
             </a></li>
-            <li><a class="webside" href="https://facebook.github.io/react/" target="_blank">
+            <li><a class="webside" href="https://facebook.github.io/react/">
               <div class="icon"><img src="images/React.png" alt=""></div>
               <span>React</span>
             </a></li>
-            <li><a class="webside" href="https://cn.vuejs.org" target="_blank">
+            <li><a class="webside" href="https://cn.vuejs.org">
               <div class="icon"><img src="images/VueJs.png" alt=""></div>
               <span>Vue.js</span>
             </a></li>
-            <li><a class="webside" href="http://www.bootcss.com" target="_blank">
+            <li><a class="webside" href="http://www.bootcss.com">
               <div class="icon"><img src="images/Bootstrap.png" alt=""></div>
               <span>Bootstrap中文网</span>
             </a></li>
-            <li><a class="webside" href="https://www.python.org" target="_blank">
+            <li><a class="webside" href="https://www.python.org">
               <div class="icon"><img src="images/Python.png" alt=""></div>
               <span>Python</span>
             </a></li>
-            <li><a class="webside" href="https://github.com" target="_blank">
+            <li><a class="webside" href="https://github.com">
               <div class="icon"><img src="images/GitHub.png" alt=""></div>
               <span>GitHub</span>
             </a></li>
-            <li><a class="webside" href="https://brew.sh/index_zh-cn.html" target="_blank">
+            <li><a class="webside" href="https://brew.sh/index_zh-cn.html">
               <div class="icon"><img src="images/Homebrew.png" alt=""></div>
               <span>Homebrew</span>
             </a></li>
-            <li><a class="webside" href="http://www.ofmonkey.com" target="_blank">
+            <li><a class="webside" href="http://www.ofmonkey.com">
               <div class="icon"><img src="images/程序员在线工具.png" alt=""></div>
               <span>程序员在线工具</span>
             </a></li>
@@ -126,19 +127,19 @@
         </div>
         <div class="webside-wrap design display-none">
           <ul>
-            <li><a class="webside" href="http://www.easyicon.net" target="_blank">
+            <li><a class="webside" href="http://www.easyicon.net">
               <div class="icon"><img src="images/EasyIcon.png" alt=""></div>
               <span>EasyIcon</span>
             </a></li>
-            <li><a class="webside" href="http://www.iconfont.cn/manage/index" target="_blank">
+            <li><a class="webside" href="http://www.iconfont.cn/manage/index">
               <div class="icon"><img src="images/Iconfont.png" alt=""></div>
               <span>Iconfont</span>
             </a></li>
-            <li><a class="webside" href="http://nipponcolors.com/#shironezumi" target="_blank">
+            <li><a class="webside" href="http://nipponcolors.com/#shironezumi">
               <div class="icon"><img src="images/NIPPON COLORS.png" alt=""></div>
               <span>NIPPON COLORS</span>
             </a></li>
-            <li><a class="webside" href="http://cli.im" target="_blank">
+            <li><a class="webside" href="http://cli.im">
               <div class="icon"><img src="images/草料二维码.png" alt=""></div>
               <span>草料二维码</span>
             </a></li>
@@ -146,27 +147,27 @@
         </div>
         <div class="webside-wrap course display-none">
           <ul>
-            <li><a class="webside" href="http://www.imooc.com" target="_blank">
+            <li><a class="webside" href="http://www.imooc.com">
               <div class="icon"><img src="images/慕课网.png" alt=""></div>
               <span>慕课网</span>
             </a></li>
-            <li><a class="webside" href="http://study.163.com/" target="_blank">
+            <li><a class="webside" href="http://study.163.com/">
               <div class="icon"><img src="images/网易云课堂.png" alt=""></div>
               <span>网易云课堂</span>
             </a></li>
-            <li><a class="webside" href="http://www.51zxw.net/study.asp?vip=4754485" target="_blank">
+            <li><a class="webside" href="http://www.51zxw.net/study.asp?vip=4754485">
               <div class="icon"><img src="images/我要自学网.png" alt=""></div>
               <span>我要自学网</span>
             </a></li>
-            <li><a class="webside" href="http://haoduoshipin.com" target="_blank">
+            <li><a class="webside" href="http://haoduoshipin.com">
               <div class="icon"><img src="images/网址.png" alt=""></div>
               <span>haoduoshipin</span>
             </a></li>
-            <li><a class="webside" href="http://www.runoob.com" target="_blank">
+            <li><a class="webside" href="http://www.runoob.com">
               <div class="icon"><img src="images/菜鸟教程.png" alt=""></div>
               <span>菜鸟教程</span>
             </a></li>
-            <li><a class="webside" href="http://www.liaoxuefeng.com" target="_blank">
+            <li><a class="webside" href="http://www.liaoxuefeng.com">
               <div class="icon"><img src="images/网址.png" alt=""></div>
               <span>廖雪峰的官方网站</span>
             </a></li>
@@ -174,11 +175,11 @@
         </div>
         <div class="webside-wrap ss display-none">
           <ul>
-            <li><a class="webside" href="http://ss.ishadowx.com/index_cn.html" target="_blank">
+            <li><a class="webside" href="http://ss.ishadowx.com/index_cn.html">
               <div class="icon"><img src="images/iShadow.png" alt=""></div>
               <span>iShadow</span>
             </a></li>
-            <li><a class="webside" href="https://shadowsocksr.ru" target="_blank">
+            <li><a class="webside" href="https://shadowsocksr.ru">
               <div class="icon"><img src="images/免费ShadowsocksR.png" alt=""></div>
               <span>免费ShadowsocksR</span>
             </a></li>
@@ -186,19 +187,19 @@
         </div>
         <div class="webside-wrap bbs display-none">
           <ul>
-            <li><a class="webside" href="https://www.chiphell.com/" target="_blank">
+            <li><a class="webside" href="https://www.chiphell.com/">
               <div class="icon"><img src="images/chiphell.png" alt=""></div>
               <span>Chiphell</span>
             </a></li>
-            <li><a class="webside" href="https://www.zhihu.com/" target="_blank">
+            <li><a class="webside" href="https://www.zhihu.com/">
               <div class="icon"><img src="images/知乎.png" alt=""></div>
               <span>知乎</span>
             </a></li>
-            <li><a class="webside" href="http://bbs.gfan.com" target="_blank">
+            <li><a class="webside" href="http://bbs.gfan.com">
               <div class="icon"><img src="images/机锋论坛.png" alt=""></div>
               <span>机锋论坛</span>
             </a></li>
-            <li><a class="webside" href="http://www.dgtle.com/dgmobile.php" target="_blank">
+            <li><a class="webside" href="http://www.dgtle.com/dgmobile.php">
               <div class="icon"><img src="images/数字尾巴.png" alt=""></div>
               <span>数字尾巴</span>
             </a></li>
@@ -206,7 +207,7 @@
         </div>
         <div class="webside-wrap blog display-none">
           <ul>
-            <li><a class="webside" href="http://www.ruanyifeng.com/blog/" target="_blank">
+            <li><a class="webside" href="http://www.ruanyifeng.com/blog/">
               <div class="icon"><img src="images/网址.png" alt=""></div>
               <span>阮一峰的网络日志</span>
             </a></li>
@@ -214,23 +215,23 @@
         </div>
         <div class="webside-wrap web display-none">
           <ul>
-            <li><a class="webside" href="https://www.apple.com/cn/" target="_blank">
+            <li><a class="webside" href="https://www.apple.com/cn/">
               <div class="icon"><img src="images/Apple.png" alt=""></div>
               <span>Apple</span>
             </a></li>
-            <li><a class="webside" href="http://www.sonystyle.com.cn/" target="_blank">
+            <li><a class="webside" href="http://www.sonystyle.com.cn/">
               <div class="icon"><img src="images/sony.png" alt=""></div>
               <span>SONY</span>
             </a></li>
-            <li><a class="webside" href="https://www.siemens.com/cn/zh/home.html" target="_blank">
+            <li><a class="webside" href="https://www.siemens.com/cn/zh/home.html">
               <div class="icon"><img src="images/siemens.png" alt=""></div>
               <span>SIEMENS</span>
             </a></li>
-            <li><a class="webside" href="http://www.philips.com.cn" target="_blank">
+            <li><a class="webside" href="http://www.philips.com.cn">
               <div class="icon"><img src="images/philips.png" alt=""></div>
               <span>PHILIPS</span>
             </a></li>
-            <li><a class="webside" href="http://www.samsung.com/cn/" target="_blank">
+            <li><a class="webside" href="http://www.samsung.com/cn/">
               <div class="icon"><img src="images/samsung.png" alt=""></div>
               <span>SAMSUNG</span>
             </a></li>
@@ -238,15 +239,15 @@
         </div>
         <div class="webside-wrap media display-none">
           <ul>
-            <li><a class="webside" href="https://www.youtube.comYouTube" target="_blank">
+            <li><a class="webside" href="https://www.youtube.comYouTube">
               <div class="icon"><img src="images/YouTube.png" alt=""></div>
               <span>YouTube</span>
             </a></li>
-            <li><a class="webside" href="http://www.youku.com" target="_blank">
+            <li><a class="webside" href="http://www.youku.com">
               <div class="icon"><img src="images/优酷.png" alt=""></div>
               <span>优酷</span>
             </a></li>
-            <li><a class="webside" href="http://www.meijutt.com" target="_blank">
+            <li><a class="webside" href="http://www.meijutt.com">
               <div class="icon"><img src="images/网址.png" alt=""></div>
               <span>美剧天堂</span>
             </a></li>
@@ -254,15 +255,15 @@
         </div>
         <div class="webside-wrap shop display-none">
           <ul>
-            <li><a class="webside" href="https://www.taobao.com" target="_blank">
+            <li><a class="webside" href="https://www.taobao.com">
               <div class="icon"><img src="images/淘宝网.png" alt=""></div>
               <span>淘宝网</span>
             </a></li>
-            <li><a class="webside" href="https://www.jd.com" target="_blank">
+            <li><a class="webside" href="https://www.jd.com">
               <div class="icon"><img src="images/京东商城.png" alt=""></div>
               <span>京东商城</span>
             </a></li>
-            <li><a class="webside" href="https://www.1688.com/" target="_blank">
+            <li><a class="webside" href="https://www.1688.com/">
               <div class="icon"><img src="images/阿里巴巴.png" alt=""></div>
               <span>阿里巴巴</span>
             </a></li>
@@ -270,15 +271,15 @@
         </div>
         <div class="webside-wrap map display-none">
           <ul>
-            <li><a class="webside" href="http://ditu.amap.com" target="_blank">
+            <li><a class="webside" href="http://ditu.amap.com">
               <div class="icon"><img src="images/高德地图.png" alt=""></div>
               <span>高德地图</span>
             </a></li>
-            <li><a class="webside" href="http://www.google.cn/maps/" target="_blank">
+            <li><a class="webside" href="http://www.google.cn/maps/">
               <div class="icon"><img src="images/Google地图.png" alt=""></div>
               <span>Google地图</span>
             </a></li>
-            <li><a class="webside" href="https://www.google.com/earth/" target="_blank">
+            <li><a class="webside" href="https://www.google.com/earth/">
               <div class="icon"><img src="images/Google地球.png" alt=""></div>
               <span>Google地球</span>
             </a></li>
@@ -286,15 +287,15 @@
         </div>
         <div class="webside-wrap search display-none">
           <ul>
-            <li><a class="webside" href="https://www.google.com.hk" target="_blank">
+            <li><a class="webside" href="https://www.google.com.hk">
               <div class="icon"><img src="images/Google.png" alt=""></div>
               <span>Google</span>
             </a></li>
-            <li><a class="webside" href="http://magnet.chongbuluo.com" target="_blank">
+            <li><a class="webside" href="http://magnet.chongbuluo.com">
               <div class="icon"><img src="images/虫部落.png" alt=""></div>
               <span>虫部落</span>
             </a></li>
-            <li><a class="webside" href="http://www.javzoo.org" target="_blank">
+            <li><a class="webside" href="http://www.javzoo.org">
               <div class="icon"><img src="images/搜索.png" alt=""></div>
               <span>JAVZOO</span>
             </a></li>
@@ -309,12 +310,12 @@
           </div>
           <div class="about-connection">
             <div class="connection-icon">
-              <a href="https://github.com/AochongZhang/Web-Nav/" target="_blank">
+              <a href="https://github.com/AochongZhang/Web-Nav/">
                 <img src="images/about-源代码.png" alt="">
               </a>
             </div>
             <div class="connection-icon">
-              <a href="https://github.com/AochongZhang/" target="_blank">
+              <a href="https://github.com/AochongZhang/">
                 <img src="images/about-github.png" alt="">
               </a>
             </div>
